<resources>
    <string name="app_name">Nagger</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Google_Sign_In">Sign in with Google account</string>
    <string name="Log_out">Log Out</string>
    <string name="Create_Reminder">Create a Reminder</string>
    <string name="Send_Reminder">Send Reminder</string>
    <string name="Recipient">Recipient</string>
    <string name="Description">Description</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
</resources>
